# mcp-daten-analyse

./: .dockerignore  Dockerfile  README.md  analyze_csv.py  docker-compose.yml  http_server.py  launcher.py  load_sqlite.py  package.json  pyproject.toml  query_sqlite.py  requirements.txt  server.py  test.json  transform_csv.py
.github/workflows/: ci.yaml
k8s/chart/templates/: deployment.yaml
k8s/charts/: Chart.yaml  values.yaml
k8s/charts/templates/: deployment.yaml  service.yaml
workflow/: csv-transformation.json
